<resources>
    <string name="app_name">SQLite Database App</string>
    <string name="view_all">View All</string>
    <string name="clear">Clear</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="insert">Insert</string>
    <string name="last">Last</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="first">First</string>
    <string name="meaning">Meaning</string>
    <string name="name">Name</string>

</resources>